# gyst

./: .gitignore  Cargo.toml  LICENSE  README.md
docs/: Project tasks.md
docs/.obsidian/: appearance.json  workspace.json
docs/cli details/: Cli design.md  Project template.md  Subcommands.md
docs/design/: Cli design.md  Structural design.md
docs/files/: CMakeUserPresets.json_{conan, vcpkg}.md  CmakePresets.json.md  Vcpkg manifest.md  project_info.toml.md
gyst docs/: Documentation.md  Overview of gyst modules.md  Project overview.canvas  Project tasks.md  README.md
gyst docs/cli details/: Cli design.md  Options and subcommands.md  Project template.md  Subcommands.md
gyst docs/features/: Basic features.md
gyst docs/files/: CMakeUserPresets.json_{conan, vcpkg}.md  CmakePresets.json.md  Conanfile.md  Project_info.md  project_info.toml.md
gyst-docs/: Documentation.md  Overview of Gyst modules.md  Overview of gyst modules.md  Project tasks.md
gyst-docs/commands/: Commands and options.md  Common options.md  Init.md  Install.md  New.md
gyst-docs/concepts/: Low and high costume.md
gyst-docs/features/: The parser.md
gyst-docs/printing/: Overview.md
src/: args.rs  cli.rs  descriptions.rs  gyst.rs  leg_off.rs  macros.rs  main.rs
src/architecture/: macros.rs  mod.rs  utils.rs
src/cli/: about.rs  architecture.rs  build_interface.rs  cli_build.rs  macros.rs  mod.rs  styles.rs
src/commands/: base.rs  help.rs  macros.rs  mod.rs
src/parser/: macros.rs  mod.rs
src/printing/: base.rs  command_help.rs  help.rs  macros.rs  mod.rs
src/system/: base.rs
(+26 files in other folders)
