[package]
name = "gyst"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anstyle = "1.0.10"
clap = { version = "4.5.9", default-features = false, features = ["std", "color", "help", "usage", "error-context", "derive"] }
unstringify = "0.1.4"
