[package]
name = "gyst"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.9", default-features = false, features = ["color", "error-context", "help", "usage", "derive", "std"] }
crossterm = "0.28.1"
inquire = "0.7.5"
paste = "1.0.15"
anstyle = "1.0.10"