[package]
name = "gyst"
version = "0.5.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.45", default-features = false, features = ["derive", "std"] }
crossterm = "0.28.1"
inquire = "0.7.5"
directories = "6.0.0"
serde = { version = "1.0.219", features = ["derive"] }
